# Audio_and-_Video_Note

./: .gitignore  README.md  openssl_build_x64.bat  未命名.cpp
code/: build_ffmpeg.sh  提醒.md
code/XCJ/103.SDL_QT_RGB/: CMakeLists.txt  main.cpp  sdl_qt_rgb.cpp  sdl_qt_rgb.hpp
code/XCJ/113.first_encode/: CMakeLists.txt  XAVFrame.hpp  XHelper.hpp  main.cpp
code/XCJ/119.test_decode_view_hw/: CMakeLists.txt  main.cpp  xsdl.cpp  xsdl.hpp  xvideo_view.cpp  xvideo_view.hpp
code/XCJ/129.rtsp_demux_decode_chain/: CMakeLists.txt  encode_params.hpp  main.cpp  xavpacket.hpp  xcodec.cpp  xcodec.hpp  xcodec_parameters.cpp  xcodec_parameters.hpp  xdecode.cpp  xdecode.hpp  xdecodetask.cpp  xdecodetask.h  xdemux.cpp  xdemux.hpp  xdemuxtask.cpp  xdemuxtask.hpp  xencode.cpp  xencode.hpp  xformat.cpp  xformat.hpp  xhelper.cpp  xhelper.hpp  xmux.cpp  xmux.hpp  xmuxtask.cpp  xmuxtask.h  xmuxtask.hpp  xsdl.cpp  xsdl.hpp  xtools.cpp  xtools.hpp  xvideo_view.cpp  xvideo_view.hpp
code/XCJ/130.SDL_Audio/: CMakeLists.txt  main.cpp
code/XCJ/131.test_xaudio_play/: CMakeLists.txt  main.cpp  sdl_audio.cpp  xaduio_parameters.hpp  xaudio_play.cpp  xaudio_play.hpp
code/XCJ/133.test_xplay/: CMakeLists.txt  main.cpp  xvideo_qtopengl_view.cpp  xvideo_qtopengl_view.hpp
code/XCJ/134.test_onvif/: CMakeLists.txt  main.c  onvif.h  soapClient.c  soapStub.h  soap_2_c.bat  soap_2_c.sh  wsdl_local.bat  wsdl_local.sh  wsdl_net.sh
code/XCJ/134.test_onvif/gsoap/: dom.c  stdsoap2.c
code/XCJ/134.test_onvif/gsoap/samples/ssl/: clientcert.pem
code/XCJ/134.test_onvif_c++/: CMakeLists.txt  MediaBinding.nsmap  main.cpp  onvif.h  soapClient.cpp  soapStub.h  soap_2_cpp.bat  soap_2_cpp.sh  wsdl_local.bat  wsdl_local.sh  wsdl_net.bat  wsdl_net.sh  xonvif.cpp  xonvif.hpp
code/XCJ/134.test_onvif_c++/gsoap/import/: wsa.h
code/XCJ/134.test_onvif_c++/gsoap/plugin/: wsseapi.cpp
code/XCJ/134.test_onvif_c++/gsoap/samples/async/: async.wsdl
code/XCJ/xviewer01/: CMakeLists.txt  main.cpp  xcamera_config.cpp  xcamera_config.hpp  xcamera_recode.cpp  xcamera_recode.hpp  xcamera_record.cpp  xcamera_record.hpp
code/XCJ/xviewer01/resources/: resources.qrc  win.rc
code/XCJ/xviewer01/ui/: XVideoWidget.cpp  XVideoWidget.hpp  ui_xviewer.h  xcalendar_widget.cpp  xcalendar_widget.hpp  xcamera_widget.cpp  xcamera_widget.hpp  xplayvieo.cpp  xplayvieo.hpp  xplayvieo.ui  xvideo_widget.cpp  xvideo_widget.hpp  xviewer.cpp  xviewer.hpp  xviewer.ui
code/h264-test/: CMakeLists.txt  main.cpp
code/public/: XAVFrame.cpp  XAVFrame.hpp  XAVPacket.cpp  XAVPacket.hpp  XSonic.cpp  XSonic.hpp  XSwsContext.cpp  XSwsContext.hpp  encode_params.hpp  xavcodec_parameters.cpp  xavframe.cpp  xavframe.hpp  xavpacket.cpp  xavpacket.hpp  xcodec_parameters.cpp  xcodec_parameters.hpp  xhelper.cpp  xhelper.hpp  xprivate_sonic.cpp  xsonic.c  xswrcontext.cpp  xswrcontext.hpp  xswscontext.hpp
code/win/2-FFmpeg/05-flv_parser_cplus/: CMakeLists.txt  FlvMetaData.cpp  FlvMetaData.h  FlvParser.cpp  FlvParser.h  Videojj.cpp  Videojj.h  main.cpp  vadbg.cpp  vadbg.h
code/win/2-FFmpeg/16-video-filter/: AVFilter_Demo.cpp  AVFilter_Demo.hpp  CMakeLists.txt  ShareAVPacket.cpp  main.cpp
code/win/3-ffplay/01-ffplay/: CMakeLists.txt  cmdutils.c  cmdutils.h  ffplay.c  ffplay_win.c  opt_common.c  w32dlfcn.h
code/win/4-player/TestQtAudioSink/: CMakeLists.txt  main.cpp
code/win/4-player/XPlay2/: CMakeLists.txt  XPlay2Widget.cpp  XPlay2Widget.hpp  XPlay2Widget.ui  XQSliderWidget.cpp  XQSliderWidget.hpp  XThrow.cpp  XVideoWidget.cpp  XVideoWidget.hpp  main.cpp  ui_XPlay2Widget.h
code/win/4-player/XPlay2/src/: AVHelper.cpp  AVHelper.h  IVideoCall.hpp  QXAudioPlay.cpp  QXAudioPlay.hpp  ShareAVFrame.cpp  ShareAVFrame.hpp  SwrContext_t.cpp  XAVCodecParameters.cpp  XAVCodecParameters.hpp  XAVFrame.cpp  XAVFrame.hpp  XAVPacket.cpp  XAVPacket.hpp  XAVQThreadAbstract.cpp  XAVQThreadAbstract.hpp  XAVQThread_Abstract.cpp  XAVQThread_Abstract.hpp  XAudioPlay.cpp  XAudioPlay.hpp  XAudioThread.cpp  XAudioThread.hpp  XDecode.cpp  XDecode.hpp  XDecodeThread.cpp  XDecodeThread.hpp  XDemux.cpp  XDemux.hpp  XDemuxThread.cpp  XDemuxThread.hpp  XHelper.cpp  XHelper.h  XHelper.hpp  XResample.cpp  XResample.hpp  XShareAVFrame.cpp  XShareAVFrame.hpp  XShareAVPacket.cpp  XShareAVPacket.hpp  XSonic.c  (+12 more)
code/xlib/: CMakeLists.bak  CMakeLists.txt  encode_params.hpp  sdl_audio.cpp  singleton.hpp  xaduio_parameters.hpp  xaudio_parameters.cpp  xaudio_play.cpp  xaudio_play.hpp  xaudio_triple_speed.cpp  xaudio_triple_speed.hpp  xavframe.cpp  xavframe.hpp  xavpacket.cpp  xavpacket.hpp  xcodec.cpp  xcodec.hpp  xcodec_parameters.cpp  xcodec_parameters.hpp  xdecode.cpp  xdecode.hpp  xdecodetask.cpp  xdecodetask.hpp  xdemux.cpp  xdemux.hpp  xdemuxtask.cpp  xdemuxtask.hpp  xencode.cpp  xencode.hpp  xformat.cpp  xformat.hpp  xhelper.cpp  xhelper.hpp  xmux.cpp  xmux.hpp  xmuxtask.cpp  xmuxtask.hpp  xplay.cpp  xplay.hpp  xplayer.cpp  (+16 more)
note/1.音视频基础知识/: 1-1音视频录制原理.md  1-2音视频播放原理.md  1-3图像基础与深入YUV_RGB.md  1-4视频主要概念.md  1-5音频基础.md  1-6封装格式_音频同步.md
note/2.开发环境搭建/: X265编译64bit说明.md  mac环境搭建.md  ubuntu16环境搭建.md  windows环境搭建.md
note/3.ffmpeg命令实战/: 1-1_ffmpeg如何查询命令帮助文档.md  1-ffmpeg如何查询命令帮助文档.md  10-ffmpeg命令提取像素格式和PCM数据.md  11-ffmpeg命令转封装.md  12-ffmpeg命令过滤器.md  12-fmpeg命令裁剪和合并视频.md  13-fmpeg命令图片与视频互转.md  14-ffmpeg命令视频录制.md  15-ffmpeg命令直播.md  16-ffmpeg命令filter过滤器.md  2-ffmpeg音视频处理流程.md  3-ffmpeg命令分类查询.md  4-ffplay播放控制.md  5-ffplay命令选项.md  6-ffplay命令播放.md  7-ffplay简单过滤器.md  8-ffmpeg命令参数.md  9-ffmpeg命令提取音视频数据.md
note/4.SDL音视频渲染实战/: 1-SDL音视频渲染.md
note/5.ffmpeg编程/: .$add_stream.drawio.bkp  .$add_stream.drawio.dtmp  1.FFmpeg编程入门.md  10.视频解码实战.md  11.mp4文件分析.md  12.MP4解封装实战.md  13.AVIO内存输入模式.md  14.⾳频处理基本概念及⾳频重采样.md  14.音频处理基本概念及音频重采样.md  15.⾳频编码实战.md  15.音频编码实战.md  16.H264编码原理.md  17.视频编码实战.md  18.音视频H264和AAC合成FLV.md  19.MP4合成.md  2.FFmpeg内存模型.md  20.FFmpeg过滤器框架分析.md  21.FFmpeg过滤器简介.md  3.FFmpeg内存实战.md  4.FFmpeg解封装解码.md  5.AAC-ADTS分析.md  6.H264-NALU分析.md  7.FLV封装格式剖析.md  8.FlvParser源码阅读.md  9.⾳频解码实战.md  A.音视频中的PTS和DTS及同步.md  add_stream.drawio  flv_mux总体流程.drawio  open_audio.drawio  open_video.drawio
(+472 files in other folders)
